@@ -6,6 +6,8 @@ FEATURES:
 	- nsd-control addzones and delzones read list of zones from stdin.
 BUG FIXES:
 	- Fix #665: when removing subdomain, nsd does not reparse parent zone.
+	- Fix task and zonestat files to be stored in a subdirectory in tmp
+	  to stop priviledge elevation.
 
 
 4.1.2
